// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShortListDropDown modal is visible when merge is required 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
    role="button"
    tabindex={0}
  >
    <span
      className="short-badge"
    >
      (2)
    </span>
  </div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
  >
    <i
      className="material-icons top-bar-dropdown-list--close-btn"
      onClick={[Function]}
      tabindex={0}
    >
      clear
    </i>
    <a
      className="link  link--no-hover"
      data-cy=""
      href="/huskeliste"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <p
        className="tc Text Text__body Text__body--color-elm--weight-semibold--transform-uppercase"
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        Huskeliste (2)
      </p>
    </a>
    <div
      className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
      className="top-bar-dropdown-list--elements"
    >
      <span>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid1"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid1"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid1"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title1
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description1
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget1
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid2"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid2"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid2"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title2
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description2
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget2
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
      </span>
    </div>
    <div
      className="top-bar-dropdown-list--footer"
    >
      <div
        onClick={[Function]}
      >
        <button
          className="
      button button__medium button__tertiary   "
          data-cy="shortlist-dropdown-visit-shortlist"
          disabled={false}
          role="button"
          tabindex="0"
        >
          <span>
            Gå til huskeliste
          </span>
        </button>
      </div>
      <div>
        OrderAllButton
      </div>
    </div>
  </div>,
]
`;

exports[`ShortListDropDown short list contains more than 3 elements, elements are added to top of list 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
    role="button"
    tabindex={0}
  >
    <span
      className="short-badge"
    >
      (4)
    </span>
  </div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
  >
    <i
      className="material-icons top-bar-dropdown-list--close-btn"
      onClick={[Function]}
      tabindex={0}
    >
      clear
    </i>
    <a
      className="link  link--no-hover"
      data-cy=""
      href="/huskeliste"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <p
        className="tc Text Text__body Text__body--color-elm--weight-semibold--transform-uppercase"
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        Huskeliste (4)
      </p>
    </a>
    <div
      className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
      className="top-bar-dropdown-list--elements"
    >
      <span>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid4"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid4"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid4"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title4
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description4
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget4
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid3"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid3"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid3"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title3
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description3
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget3
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid2"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid2"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid2"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title2
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description2
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget2
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid1"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid1"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid1"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title1
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description1
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget1
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
      </span>
    </div>
    <div
      className="top-bar-dropdown-list--footer"
    >
      <div
        onClick={[Function]}
      >
        <button
          className="
      button button__medium button__tertiary   "
          data-cy="shortlist-dropdown-visit-shortlist"
          disabled={false}
          role="button"
          tabindex="0"
        >
          <span>
            Gå til huskeliste
          </span>
        </button>
      </div>
      <div>
        OrderAllButton
      </div>
    </div>
  </div>,
]
`;

exports[`ShortListDropDown short list contains single element 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
    role="button"
    tabindex={0}
  >
    <span
      className="short-badge"
    >
      (1)
    </span>
  </div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
  >
    <i
      className="material-icons top-bar-dropdown-list--close-btn"
      onClick={[Function]}
      tabindex={0}
    >
      clear
    </i>
    <a
      className="link  link--no-hover"
      data-cy=""
      href="/huskeliste"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <p
        className="tc Text Text__body Text__body--color-elm--weight-semibold--transform-uppercase"
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        Huskeliste (1)
      </p>
    </a>
    <div
      className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
      className="top-bar-dropdown-list--elements"
    >
      <span>
        <div
          className="top-bar-dropdown-list-element"
        >
          <div
            className="top-bar-dropdown-list-element--cover-image"
          >
            <a
              className="link  link--no-hover"
              data-cy=""
              href="/værk/pid1"
              onClick={[Function]}
              style={Object {}}
              target="_self"
            >
              <BookCover
                pid="pid1"
              />
            </a>
          </div>
          <div
            className="top-bar-dropdown-list-element--text"
          >
            <div
              className="top-bar-dropdown-list-element--header"
            >
              <a
                className="link  link--no-hover"
                data-cy=""
                href="/værk/pid1"
                onClick={[Function]}
                style={Object {}}
                target="_self"
              >
                <react-truncate-markup
                  lines={1}
                >
                  <span
                    data-cy="shortlist-element-title"
                  >
                    some title1
                  </span>
                </react-truncate-markup>
              </a>
            </div>
            <div
              className="top-bar-dropdown-list-element--taxonomy-description"
            >
              some description1
            </div>
            <div
              className="top-bar-dropdown-list-element--origin"
            >
              Minder om noget1
            </div>
          </div>
          <i
            aria-label="Slet"
            className="material-icons remove-btn"
            onClick={[Function]}
            role="button"
            tabindex={0}
          >
            clear
          </i>
        </div>
      </span>
    </div>
    <div
      className="top-bar-dropdown-list--footer"
    >
      <div
        onClick={[Function]}
      >
        <button
          className="
      button button__medium button__tertiary   "
          data-cy="shortlist-dropdown-visit-shortlist"
          disabled={false}
          role="button"
          tabindex="0"
        >
          <span>
            Gå til huskeliste
          </span>
        </button>
      </div>
      <div>
        OrderAllButton
      </div>
    </div>
  </div>,
]
`;

exports[`ShortListDropDown short list is empty and merge modal is hidden 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
    role="button"
    tabindex={0}
  >
    <span
      className="short-badge"
    >
      (0)
    </span>
  </div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
         empty-list"
  >
    <i
      className="material-icons top-bar-dropdown-list--close-btn"
      onClick={[Function]}
      tabindex={0}
    >
      clear
    </i>
    <p
      className="tc Text Text__body Text__body--color-elm--weight-semibold--transform-uppercase"
      style={
        Object {
          "marginBottom": "10px",
        }
      }
    >
      Huskeliste (0)
    </p>
    <div
      className="top-bar-dropdown-list--empty-text text-center "
    >
      Din huskeliste er tom
    </div>
    <div
      className="top-bar-dropdown-list--footer"
    >
      <div
        onClick={[Function]}
      >
        <button
          className="
      button button__medium button__tertiary   "
          data-cy="shortlist-dropdown-visit-shortlist"
          disabled={true}
          role="button"
          tabindex="0"
        >
          <span>
            Gå til huskeliste
          </span>
        </button>
      </div>
      <div>
        OrderAllButton
      </div>
    </div>
  </div>,
]
`;
